Cleaned up some wording in recovery parts.

--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -4,9 +4,9 @@
     Chrome or Safari).
   </p>
   <p>
-    This is not recommended. Your user will be limited to this browser and you
-    will need to navigate to fantasygc.org from the app browser (Facebook or
-    Twitter) in order to login again.
+    This is fine, but not recommended. Your user will be limited to this browser
+    and you will need to navigate to fantasygc.org from the app browser
+    (Facebook or Twitter) in order to login again.
   </p>
   <p>
     Long press this link:
@@ -23,7 +23,7 @@
   <p>It appears you are in incognito mode or private mode.</p>
   <div>
     This is not recommended. Your user will be forgotten when you close your
-    browser and you will not be able to recover it.
+    browser and you may not be able to recover it.
   </div>
 </ngb-alert>
 
@@ -189,7 +189,10 @@
         If you have access to your other browser or device, (maybe you opened
         this page via Facebook or Twitter instead of Chrome or Safari) then you
         can generate a recovery code by clicking on the Tabernacle Organ. Then
-        click Get Recovery Code.
+        click Get Recovery Code.<br />
+        It will look like this:<br />
+
+        <img class="recovery-img" src="/assets/recovery.png" />
       </p>
       <div class="form-group recovery-code-wrapper">
         <label for="recoveryCode">I have a Recovery Code:</label>
