--- a/client/src/app/nav-header/nav-header.component.html
+++ b/client/src/app/nav-header/nav-header.component.html
@@ -112,8 +112,8 @@
 
       <ngb-alert *ngIf="recoveryCode" type="warning" [dismissible]="false">
         <p class="recovery-code">{{ recoveryCode }}</p>
-        Use this code to login on another device or browser. It is valid for a
-        half hour.
+        Use this code to login on another device or browser. <br />
+        It is valid for a half hour.
       </ngb-alert>
     </form>
   </div>
