--- a/client/src/app/welcome/welcome.component.scss
+++ b/client/src/app/welcome/welcome.component.scss
@@ -85,3 +85,10 @@ ngb-alert:first-of-type {
   letter-spacing: 6px;
   text-transform: uppercase;
 }
+
+.recovery-img {
+  max-width: 100%;
+  max-height: 200px;
+  border-radius: 5px;
+  margin-bottom: 12px;
+}
