--- a/client/src/app/scoreboard/scoreboard.component.html
+++ b/client/src/app/scoreboard/scoreboard.component.html
@@ -1,4 +1,4 @@
-<h3>Top Players</h3>
+<h3>Top Scores</h3>
 <ng-template [ngIf]="!scores?.length" [ngIfElse]="scoresPresent">
   <h4 class="grey-text">No scores yet...</h4>
 </ng-template>
