--- a/client/src/app/section/section.component.scss
+++ b/client/src/app/section/section.component.scss
@@ -3,3 +3,9 @@ h2 {
   justify-content: space-between;
   align-items: center;
 }
+
+.note {
+  margin-left: 18px;
+  font-size: 75%;
+  color: #777;
+}
