--- a/client/src/app/admin/admin.component.scss
+++ b/client/src/app/admin/admin.component.scss
@@ -2,3 +2,11 @@ h1 {
   font-size: 20px;
   margin-top: 18px;
 }
+
+.user-edit {
+  &::before {
+    content: " ";
+    width: 24px;
+    display: inline-block;
+  }
+}
