Added "Answers are saved automatically." message

--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -19,7 +19,8 @@
   <p>Here's how you play:</p>
   <p>
     It is pretty easy. Open one of the sections below and guess who will be
-    speaking and what color tie they will be wearing, etc.
+    speaking and what color tie they will be wearing, etc. Answers are saved
+    automatically.
   </p>
   <p>
     When General Conference starts, some of the questions will lock and you will
