--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -46,7 +46,8 @@
     <p class="fade-in-1">Here's how you play:</p>
     <p class="fade-in-2">
       It is pretty easy. Pick a name and your family name. Then you will guess
-      who will be speaking and what color tie they will be wearing, etc.
+      who will be speaking and what color tie they will be wearing, etc. Answers
+      are saved automatically.
     </p>
     <p class="fade-in-3">
       When General Conference starts, some of the questions will lock and you
